# test-connections

./: .cspellcache  .editorconfig  .eslintignore  .eslintrc.js  .eslintrc.json  .flake8  .fossa.yml  .gitignore  .gitlab-ci.yml  .jscpd.json  .mega-linter.yml  .pre-commit-config.yaml  .prettierignore  .prettierrc  .python-version  .readthedocs.yml  AUTHORS  AUTHORS.md  CHANGELOG.md  README.md  README_de.md  SECURITY.md  commitlint.config.js  cspell.config.yaml  cspell.json  goodcheck.yml  ignore-words.txt  logging.conf  mkdocs.insiders.yml  mkdocs.yml  noxfile.py  package-lock.json  package.json  pnpm-lock.yaml  project-words.txt  pyproject.toml  ruff.toml  ruff_defaults.toml  tox.ini
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  config.yml  dependabot.yml  labeler.yml  pr-labeler.yml
.github/DISCUSSION_TEMPLATE/: q-a.yml
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  01-bug-report.yml.md  02-feature-request.yml  03-documentation.yml  config.yml
.github/actions/spelling/: README.md  advice.md  candidate.patterns  line_forbidden.patterns  reject.txt
.github/workflows/: Semgrep.yml  add-comment-to-issue.yml  add-issue-header.yml  add-label-to-issue.yml  assigned-pulls-todo.yml  ci.yml  codacy-analysis.yml  codacy.yml  codeql-analysis.yml  commitlint.yml  constraints.txt  defender-for-devops.yml  dependabot-merge.yml  dependency-review.yml  devskim-analysis.yml  devskim.yml  docs-dev.yml  docs-release.yml  docs.yml  ethicalcheck.yml  gh-pages.yml  issues.yml  labeler.yml  lock.yml  mega-linter.yml  misspell-fixer.yml  mkdocs-pages.yml  opened-issues-triage.yml  ossar-analysis.yml  pages-astro.yml  pr-labeler.yml  pr-lint.yaml  pre-commit.yml  py-gh-action.yml  python-publish.yml  release-drafter.yml  repo-stats.yml  reuse-check.yml  scorecard.yml  semgrep.yml  (+7 more)
.reuse/: dep5
.trunk/: trunk.yaml
doc/: conf.py  index.md  index.rst  usage.md
doc/_build/doctrees/: cli.doctree  environment.pickle  index.doctree
doc/_build/html/: .buildinfo  cli.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
doc/_build/html/_sources/: index.md.txt  index.rst.txt
docs/: cli.md  cli_help.txt  codeofconduct.md  conf.py  contributing.md  index.md  license.md  philosophy.md  quickstart.md  reference.md  upgrade.md
docs/.overrides/partials/: copyright.html
docs/.overrides/partials /: copyright.html
docs/about/: EUPL-1.2.md  authors.md  contributing.md  release-notes.md
docs/cli/: about.md  reference.md
docs/community/: code_of_conduct.md  contributing.md  faq.md  third_party_packages.md
docs/css/: custom.css
docs/developer/: build.md  changelog.md  cli.md  config.md  configuration.md  core.md  overview.md  release-notes.md
docs/developer-guide/: overview.md
docs/developer-guide/api/: cli.md  config.md  core.md
docs/guides/: commandline.md  install.md  logging.md  troubleshooting.md
docs/includes/: abbreviations.md
docs/js/: chat.js  sidecar-1.5.0.js
docs/user-guide/: install.md
extension_sample/: pyproject.toml
scripts /: install_mkdocs_material_insiders.py
src/: pyproject.toml
src/checkconnect/: __init__.py  __main__.py  _version.py  test-connections.ini  url.csv
src/checkconnect/cli/: __init__.py  application.py
src/checkconnect/config/: settings.py
src/checkconnect/core/: check_ntp.py  check_urls.py
src/test-connections/: __init__.py  __main__.py
src/test_connections/: __about__.py  __init__.py  __main__.py  _typing.py  test-connections.ini
src/test_connections/app/cli/: __init__.py  _typing.py  main.py
src/test_connections/cli/app/: __about__.py  __init__.py  __main__.py  _typing.py  main.py
src/test_connections/config/: settings.py
src/test_connections/core/: check_ntp.py  check_urls.py
tests/: __init__.py  main_test.py  test_main.py
tests/config/: __init__.py  settings_test.py  test_settings.py
