# SPDX-FileCopyrightText: 2023-2024 Jürgen Mülbert
#
# SPDX-License-Identifier: EUPL-1.2

[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-fancy-pypi-readme>=22.5",
  "hatchling>=1.22.2",
]

[project]
name = "test-connections"
description = "Checks the availability of web addresses and NTP servers."
keywords = [
  "availability",
  "check program",
  "NTP server",
  "testing",
  "web address",
]
license = "EUPL-1.2"
maintainers = [
  { name = "Jürgen Mülbert" },
  { email = "juergen.muelbert@outlook.de" },
]
authors = [{ name = "Jürgen Mülbert", email = "juergen.muelbert@outlook.de" }]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: European Union Public License 1.2 (EUPL 1.2)",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: OS Independent",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Internet",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Testing",
]
dynamic = [
  "readme",
  "version",
]
dependencies = [
  "click>=8.0.4",
  "fpdf>=1.7.2",
  "ntplib>=0.4",
  "pyinstaller>=4.9",
  "requests>=2.27.1",
]
[project.urls]
Bugtracker = "https://github.com/jmuelbert/test-connections/issues"
Changelog = "https://github.com/jmuelbert/test-connections/releases"
Documentation = "https://github.com/jmuelbert/test-connections#readme"
Issues = "https://github.com/jmuelbert/test-connections/issues"
Source = "https://github.com/jmuelbert/test-connections"
[project.scripts]
test-connections = "test_connections.app.cli:main"

[tool.hatch.build.targets.sdist]
exclude = ["/.github", "/backend", "/scripts"]
include = ["/src/test_connections", "/CHANGELOG.md", "/README.md"]

[tool.hatch.version]
path = "src/test_connections/__about__.py"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "CHANGELOG.md"

[tool.hatch.envs.hatch-static-analysis]
config-path = "ruff_defaults.toml"

[tool.hatch.envs.default]
dependencies = ["coverage[toml]>=6.5", "pytest"]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = ["- coverage combine", "coverage report"]
cov = ["test-cov", "cov-report"]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = ["mypy>=1.0.0"]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/test_connections tests}"

[tool.hatch.envs.docs]
dependencies = [
  "mkdocs~=1.5.3",
  "mkautodoc~=0.2.0",
  "mkdocs-material~=9.5.1",
  # Plugins
  "mkdocs-minify-plugin~=0.7.1",
  "mkdocs-git-revision-date-localized-plugin~=1.2.1",
  "mkdocs-git-committers-plugin-2~=2.2.2",
  "mkdocstrings-python~=1.7.5",
  "mkdocs-redirects~=1.2.1",
  "mkdocs-glightbox~=0.3.5",
  "mike~=2.0.0",
  # Extensions
  "mkdocs-click~=0.8.1",
  "pymdown-extensions~=10.5.0",
  # Necessary for syntax highlighting in code blocks
  "pygments~=2.17.2",
  # Validation
  # https://github.com/linkchecker/linkchecker/pull/669#issuecomment-1267236287
  "linkchecker @ git+https://github.com/linkchecker/linkchecker.git@d9265bb71c2054bf57b8c5734a4825d62505c779",
  # Sphinx
  "sphinx>=7.2.6",
  "sphinx-argparse-cli>=1.11.1",
  "sphinx-autodoc-typehints>=1.25.2",
  "sphinx-copybutton>=0.5.2",
  "sphinx-rtd-theme>=1.0.0",
  "myst-parser>=0.15.2",
]

[tool.hatch.envs.docs.env-vars]
SOURCE_DATE_EPOCH = "1580601600"
PYTHONUNBUFFERED = "1"
MKDOCS_CONFIG = "mkdocs.yml"

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --config-file {env:MKDOCS_CONFIG} --clean --strict {args}"
serve = "mkdocs serve --config-file {env:MKDOCS_CONFIG} --dev-addr localhost:8000 {args}"
ci-build = "mike deploy --config-file {env:MKDOCS_CONFIG} --update-aliases {args}"
validate = "linkchecker --config .linkcheckerrc site"
# https://github.com/linkchecker/linkchecker/issues/678
build-check = ["build --no-directory-urls", "validate"]
# Sphinx
clean = "rm -rf doc/_build"
clean-generated = ["rm -rf doc/user_guide/generated", "rm -rf doc/gallery"]
clean-all = ["clean", "clean-generated", "rm -rf doc/_images"]
build-html = [
  "mkdir -p doc/_images",
  "sphinx-build -b html -d doc/_build/doctrees doc doc/_build/html",
]
build-html-win = [
  "if not exist doc\\_images md doc\\_images",
  "sphinx-build -b html -d doc\\_build\\doctrees doc doc\\_build\\html",
]

[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38', 'py39', 'py310']
include = '''
    \.pyi?$
'''
extend-exclude = '''
/(
    \.git
  | \.mypy_cache
  | ^lib/spack/external/
  | ^opt/
)/
'''

[tool.ruff]
target-version = "py38"
lint.isort = { known-first-party = [
  "tox",
  "tests",
], required-imports = [
  "from __future__ import annotations",
] }
lint.select = ["ALL"]
lint.ignore = [
  "CPY",     # No copyright header
  "INP001",  # no implicit namespaces here
  "D",       # ignore documentation for now
  "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed in `arg`"
  "ANN101",  # Missing type annotation for `self` in method
  "ANN102",  # Missing type annotation for `cls` in classmethod"
  "D203",    # `one-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible
  "D212",    # `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible
  "S104",    # Possible binding to all interfaces
  "COM812",  # conflicts with formatter
  "ISC001",  # conflicts with formatter
  "S404",    # Using subprocess is alright.
  "PLR0914", ## Too many local variables
  "PLR0917", ## Too many positional arguments
]
format.preview = true
lint.preview = true
format.docstring-code-format = true
format.docstring-code-line-length = 100

[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
  "S101",    # asserts allowed in tests...
  "FBT",     # don"t care about booleans as positional arguments in tests
  "INP001",  # no implicit namespace
  "D",       # don"t care about documentation in tests
  "S603",    # `subprocess` call: check for execution of untrusted input
  "PLR2004", # Magic value used in comparison, consider replacing with a constant variable
]

[tool.codespell]
builtin = "clear,usage,en-GB_to_en-US"
write-changes = true
skip = "*.svg"
ignore-words = "ignore-words.txt"
count = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--strict-markers", "--strict-config", "--color=yes"]
xfail_strict = true
junit_family = "xunit2"
filterwarnings = ["error"]
log_cli_level = "info"
testpaths = ["tests"]
markers = [
  "save_engine: marks some of the tests which are using an external package to save a chart to e.g. a png file. This mark is used to run those tests selectively in the build GitHub Action.",
]

[tool.coverage.run]
source_pkgs = ["test_connections", "tests"]
branch = true
parallel = true
omit = ["src/test_connections/__about__.py"]

[tool.coverage.paths]
test_connections = [
  "src/test_connections",
  "*/test-connections/src/test_connections",
]
tests = ["tests", "*/test-connections/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.mypy]
disallow_untyped_defs = false
disallow_incomplete_defs = false
follow_imports = "normal"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
strict = true
explicit_package_bases = true
namespace_packages = true
warn_no_return = false
warn_unused_ignores = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]

[[tool.mypy.overrides]]
module = ['lark.*', 'virtualenv.*']
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_no_return = true
